<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>onix_control</name>
  <version>1.0.3</version>
  <description>Lockunkey Onix controller configurations</description>

  <author email="navaneeth@thedush.com">Navaneeth</author>

  <maintainer email="navaneeth@thedush.com">Navaneeth</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>onix_description</depend>
  <!-- <depend>interactive_marker_twist_server</depend> -->
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joy</depend>
  <!-- <depend>multimaster_launch</depend> -->
  <depend>robot_localization</depend>
  <!-- <depend>rostopic</depend> -->
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>teleop_twist_joy</depend>
  <depend>twist_mux</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
