<?xml version="1.0"?>
<package format="3">
  <name>onix_viz</name>
  <version>1.0.3</version>
  <description>Visualization configuration for Lockunkey Onix</description>

  <author email="navaneeth@thedush.com">Navaneeth</author>

  <maintainer email="navaneeth@thedush.com">Navaneeth</maintainer>

  <license>BSD</license>



  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>onix_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <!-- <exec_depend>rviz_imu_plugin</exec_depend> -->

  <depend>launch_ros</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
